<resources>
    <string name="app_name">Agenda 2</string>
    <string name="title_activity_main">Agenda2</string>
    <string name="menu_settings">Settings</string>
    <string name="contact_name">Nome</string>
    <string name="contact_tel">Telefone</string>
    <string name="contact_email">Email</string>
    <string name="contact_new">Novo Contato</string>
    <string name="contact_edit">Editar Contato</string>
    <string name="contact_del">Deletar</string>
    <string name="contact_view">Contatos</string>
    <string name="contact_save">Salvar</string>

</resources>